--- a/app/src/main/res/layout/adapter_item_element.xml
+++ b/app/src/main/res/layout/adapter_item_element.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/element_container"
     android:layout_width="58dp"
     android:layout_height="58dp"
     android:orientation="horizontal"
@@ -10,6 +11,7 @@
         android:id="@+id/textView_atom_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/name_textsize"
         tools:text="1" />
 
     <LinearLayout
@@ -29,13 +31,16 @@
             android:id="@+id/textView_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textSize="@dimen/name_textsize"
             tools:text="Hydrogen" />
 
         <FrameLayout
+            android:id="@+id/element_type"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@color/black" />
     </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
