--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
-    <color name="alkali_metal">#FF0000</color>
-
-    <color name="toprak_alkali">#0000FF</color>
-
+    <!--element-type-->
     <color name="ametal">#FFEB3B</color>
+    <color name="alkali_metal">#FF0000</color>
+    <color name="toprak_alkali">#0000FF</color>
+    <color name="yari_metal">#E91E63</color>
+    <color name="gecis_metalleri">#DAFF5800</color>
+    <color name="halojenler">#1EC832</color>
+    <color name="soygazlar">#673AB7</color>
+    <color name="lantanitler">#F44336</color>
+    <color name="aktinitler">#388C3B</color>
+    <color name="none">#FFFFFF</color>
+
 </resources>
