--- a/app/src/main/res/layout/adapter_item_element.xml
+++ b/app/src/main/res/layout/adapter_item_element.xml
@@ -2,12 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/element_container"
-    android:layout_width="58dp"
-    android:layout_height="58dp"
+    android:layout_width="65dp"
+    android:layout_height="65dp"
     android:orientation="horizontal"
     android:padding="2dp">
 
     <TextView
+        android:textColor="@android:color/white"
+        android:padding="2dp"
         android:id="@+id/textView_atom_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,12 +17,14 @@
         tools:text="1" />
 
     <LinearLayout
+        android:id="@+id/info_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
 
         <TextView
+            android:textColor="@android:color/white"
             android:id="@+id/textView_symbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,6 +32,7 @@
             tools:text="H" />
 
         <TextView
+            android:textColor="@android:color/white"
             android:id="@+id/textView_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,9 +42,10 @@
             tools:text="Hydrogen" />
 
         <FrameLayout
+            android:layout_margin="2dp"
             android:id="@+id/element_type"
             android:layout_width="match_parent"
-            android:layout_height="3dp"
+            android:layout_height="2dp"
             android:background="@color/black" />
     </LinearLayout>
 
