--- a/app/src/main/res/layout/adapter_item_element.xml
+++ b/app/src/main/res/layout/adapter_item_element.xml
@@ -8,11 +8,11 @@
     android:padding="2dp">
 
     <TextView
-        android:textColor="@android:color/white"
-        android:padding="2dp"
         android:id="@+id/textView_atom_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="2dp"
+        android:textColor="@android:color/white"
         android:textSize="@dimen/name_textsize"
         tools:text="1" />
 
@@ -24,29 +24,34 @@
         android:orientation="vertical">
 
         <TextView
-            android:textColor="@android:color/white"
             android:id="@+id/textView_symbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/symbol_textsize"
             tools:text="H" />
 
         <TextView
-            android:textColor="@android:color/white"
             android:id="@+id/textView_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/name_textsize"
             tools:text="Hydrogen" />
 
         <FrameLayout
-            android:layout_margin="2dp"
             android:id="@+id/element_type"
             android:layout_width="match_parent"
             android:layout_height="2dp"
+            android:layout_margin="2dp"
             android:background="@color/black" />
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/beautification"
+        android:layout_width="63dp"
+        android:layout_height="63dp"/>
 
 </FrameLayout>
