--- a/app/src/main/res/layout/adapter_item_element.xml
+++ b/app/src/main/res/layout/adapter_item_element.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/element_container"
     android:layout_width="65dp"
@@ -28,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/symbol_textsize"
+            android:textSize="@dimen/symbol_text_size"
             tools:text="H" />
 
         <TextView
@@ -52,6 +53,13 @@
     <FrameLayout
         android:id="@+id/beautification"
         android:layout_width="63dp"
-        android:layout_height="63dp"/>
+        android:layout_height="63dp" />
+
+    <FrameLayout
+        android:id="@+id/radioactivity"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="0dp" />
 
 </FrameLayout>
