--- a/app/src/main/res/layout/fragment_element_dialog.xml
+++ b/app/src/main/res/layout/fragment_element_dialog.xml
@@ -6,6 +6,7 @@
     android:layout_height="370dp">
 
     <TextView
+
         android:id="@+id/textView_atom_number_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,6 +26,7 @@
         tools:text="Au" />
 
     <TextView
+        android:id="@+id/textView_name_dialog"
         android:textSize="@dimen/symbol_text_size"
         android:layout_marginStart="10dp"
         tools:text="Gold"
@@ -41,13 +43,16 @@
         android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@id/textView_symbol_dialog"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/element_image" />
 
     <ImageView
+        android:src="@drawable/radiation"
         android:id="@+id/imageView_radioactivity"
         android:layout_width="35dp"
         android:layout_height="35dp"
         app:layout_constraintStart_toEndOf="@id/imageView_element"
-        app:layout_constraintTop_toTopOf="@id/textView_atom_number_dialog"/>
+        app:layout_constraintTop_toTopOf="@id/textView_atom_number_dialog"
+        android:contentDescription="@string/radioactivity_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
