--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="symbol_text_size">24sp</dimen>
-    <dimen name="name_textsize">12sp</dimen>
-    <dimen name="text_size_element_name_dialog">12sp</dimen>
+    <dimen name="name_text_size">12sp</dimen>
+    <dimen name="text_size_element_name_dialog">16sp</dimen>
 </resources>
