--- a/app/src/main/res/layout/adapter_item_element.xml
+++ b/app/src/main/res/layout/adapter_item_element.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/element_container"
     android:layout_width="65dp"
@@ -14,7 +13,7 @@
         android:layout_height="wrap_content"
         android:padding="2dp"
         android:textColor="@android:color/white"
-        android:textSize="@dimen/name_textsize"
+        android:textSize="@dimen/name_text_size"
         tools:text="1" />
 
     <LinearLayout
@@ -39,7 +38,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/name_textsize"
+            android:textSize="@dimen/name_text_size"
             tools:text="Hydrogen" />
 
         <FrameLayout
