--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,103 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:context=".ui.InfoFragment">
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:padding="10dp">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/info_alkali_metal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:textColor="@color/alkali_metal"
+                tools:text="ALKALI_METAL" />
 
-                <TextView
-                    android:textColor="@color/alkali_metal"
-                    android:id="@+id/info_alkali_metal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ALKALI_METAL" />
-
-                <TextView
-                    android:textColor="@color/alkaline_earth_metal"
-                    android:id="@+id/info_alkaline_earth_metal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ALKALINE_EARTH_METAL" />
-
-                <TextView
-                    android:textColor="@color/transition_metal"
-                    android:id="@+id/info_transition_metal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="TRANSITION_METAL" />
-
-                <TextView
-                    android:textColor="@color/metal"
-                    android:id="@+id/info_metal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="METAL" />
-
-                <TextView
-                    android:textColor="@color/metaloid"
-                    android:id="@+id/info_metaloid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="METALOID" />
-            </LinearLayout>
-
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/info_alkaline_earth_metal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:textColor="@color/alkaline_earth_metal"
+                tools:text="ALKALINE_EARTH_METAL" />
 
-                <TextView
-                    android:textColor="@color/non_metal"
-                    android:id="@+id/info_non_metal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="NON_METAL" />
+            <TextView
+                android:id="@+id/info_transition_metal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/transition_metal"
+                tools:text="TRANSITION_METAL" />
 
-                <TextView
-                    android:textColor="@color/halogen"
-                    android:id="@+id/info_halogen"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="HALOGEN" />
+            <TextView
+                android:id="@+id/info_metal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/metal"
+                tools:text="METAL" />
 
-                <TextView
-                    android:textColor="@color/noble_gas"
-                    android:id="@+id/info_noble_gas"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="NOBLE_GAS" />
-
-                <TextView
-                    android:textColor="@color/lanthanide"
-                    android:id="@+id/info_lanthanide"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="LANTHANIDE" />
-
-                <TextView
-                    android:textColor="@color/actinide"
-                    android:id="@+id/info_actinide"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ACTINIDE" />
-            </LinearLayout>
-
+            <TextView
+                android:id="@+id/info_metaloid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/metaloid"
+                tools:text="METALOID" />
         </LinearLayout>
-    </FrameLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/info_non_metal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/non_metal"
+                tools:text="NON_METAL" />
+
+            <TextView
+                android:id="@+id/info_halogen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/halogen"
+                tools:text="HALOGEN" />
+
+            <TextView
+                android:id="@+id/info_noble_gas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/noble_gas"
+                tools:text="NOBLE_GAS" />
+
+            <TextView
+                android:id="@+id/info_lanthanide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/lanthanide"
+                tools:text="LANTHANIDE" />
+
+            <TextView
+                android:id="@+id/info_actinide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/actinide"
+                tools:text="ACTINIDE" />
+        </LinearLayout>
+
+    </LinearLayout>
+
 </layout>
