--- a/app/src/main/res/layout/fragment_element_dialog.xml
+++ b/app/src/main/res/layout/fragment_element_dialog.xml
@@ -6,7 +6,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="320dp"
         android:layout_height="370dp"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:background="@android:color/white">
 
         <TextView
 
