--- a/app/src/main/res/layout/adapter_item_element.xml
+++ b/app/src/main/res/layout/adapter_item_element.xml
@@ -13,6 +13,7 @@
     android:padding="2dp">
 
     <TextView
+        android:text="@{element.atomNumber}"
         android:id="@+id/textView_atom_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,10 +35,12 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
             android:textSize="@dimen/symbol_text_size"
+            android:text="@{element.symbol}"
             tools:text="H"
             tools:textColor="@android:color/black" />
 
         <TextView
+            android:text="@{element.name}"
             android:id="@+id/textView_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
